# atomic

./: .env.example  .gitignore  MODULES.md  Otchet Po Zadaniyu Na Praktiku Gost 732 2017.docx  README.md  USAGE.md  atomic_documents.csv  docker-compose.yml  final_report (2) (2).pages  main.py  model_size.py  part1.pages  pyproject.toml  report.txt  requirements.txt  Вопросы аппонентов  Ответы аппонентов.md
.deepeval/: .deepeval  .deepeval_telemetry.txt
atomic/: __init__.py  config.py
atomic/agents/: __init__.py  analyst.py  base.py  command.py  retriever.py
atomic/api/: __init__.py  server.py
atomic/embeddings/: __init__.py  client.py
atomic/llm/: __init__.py  client.py
atomic/memory/: __init__.py  chat.py  demo_seed.py  factory.py  pgvector_memory.py  pgvector_store.py  vector.py
atomic/observability/: __init__.py  langfuse.py
atomic/orchestration/: __init__.py  workflow.py
atomic/router/: __init__.py  agent.py
atomic/tools/: __init__.py  code_executor.py
dataset/: atomic.txt  Инструкция по запуску автоматизированной системы.txt  Инструкция по корректному завершению работы системы.txt  Инструкция по перезапуску сервисов АС.txt
langfuse/: docker-compose.yml
models/: Modelfile
scripts/: load_dataset.py
scripts/mopgue/: load_dataset.py
tests/: __init__.py  conftest.py  test_atomic.py
