[project]
name = "atomic"
version = "0.1.0"
description = "AI Agent System — Router, Retriever, Command, Analyst"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "ollama>=0.3.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "numpy>=1.24.0",
    "langfuse>=3.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atomic"]

[tool.uv]
dev-dependencies = [
    "deepeval>=1.0.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-v", "-m", "not slow"]  # по умолчанию только быстрые тесты
markers = [
    "slow: marks tests as slow (LLM-as-a-Judge). Полные тесты: pytest -m slow",
]
